# cpp20-vscode-template

./: .gitignore  .gitmodules  CMakeLists.txt  vcpkg.json
src/: main.cc
